--- a/inst/app/www/styles.css
+++ b/inst/app/www/styles.css
@@ -19,6 +19,13 @@ a:visited {
   font-size: 16px;
 }
 
+#sidebarItemExpanded > ul > :last-child {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        background-color: red;
+      }
+
 
 .vertical-tab-panel h4 {
   font-size: 12px;
